# NguyenHuyHung_DE18_LV2_project_01

./: .gitignore
kafka-project-1/: pyproject.toml
kafka-project-1/src/kafka_project_1/: kafka_to_kafka.py  kafka_to_mongoDB.py
kafka-project-1/src/kafka_project_1/config/: kafka.py  mongoDB.py  settings.py
