[project]
name = "kafka-project-1"
version = "0.1.0"
description = ""
authors = [
    {name = "hung230903",email = "nguyenhuyhung23092003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka (>=2.12.2,<3.0.0)",
    "pymongo (>=4.15.5,<5.0.0)"
]

[tool.poetry]
packages = [{include = "kafka_project_1", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
